--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: Roboto, Arial, sans-serif;
+    overflow-y: scroll;
 }
 
 svg{
@@ -30,8 +31,8 @@ svg{
 }
 
 .searchBar{
-    height: 30px;  
-    
+    height: 0px;  
+    margin-left: 62px;
 }
 
 .navigation__menu,
@@ -45,17 +46,21 @@ svg{
     margin-left: 13px;
 }
 
+.voiceBtn{
+    margin-left: 10px;
+}
+
 .navigation__search input{
-    width: 525px;
-    height: 32px;
+    width: 538px;
+    height: 40px;
     border: 1px solid rgb(211, 211, 211);
     font-size: 16px;
-    padding: 2px 10px;
+    padding-left: 10px;
 }
 
 .navigation__search__icon{
     border: 1px solid rgb(211, 211, 211);
-    height: 32px;
+    height: 40px;
     width: 65px;
     padding: 1px;
     border-left: none;    
@@ -71,6 +76,7 @@ svg{
 }
 
 .navigation__menu_button{
+
     line-height: 5px;
     justify-content: space-around;
 }
@@ -80,13 +86,15 @@ svg{
 }
 
 .navigation__options .navigation__button{
-    margin-right : 18px;
+    margin-right : 25px;
+    /* margin-left : 0px; */
 }
 
 .navigation__button{
     height: 36px;
     width : 36px;
     border : none;
+    
 }
 
 .navigation__avatar{
@@ -95,6 +103,7 @@ svg{
     border-radius: 50%;
     background-color: gray;
     display: inline-block; 
+    margin-right: 13px;
 }
  /* chips */
 
@@ -135,11 +144,29 @@ svg{
     top: 56px;
     left: 0;
     bottom: 0;
+    height: calc(100vh-56px);
+    overflow-y: scroll;
+}
 
+.sidebar img{
+    margin-right: 21px;
+    border-radius: 50%;
 }
 
 .sidebar__seaction{
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 8px 0;
+}
+
+.sidebar__seaction h3{
+    padding-left : 24px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-weight: 500;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: rgb(96, 96, 96);
+
 }
 
 .sidebar__seaction__link{
@@ -166,4 +193,22 @@ svg{
 
 .sidebar__seaction__link--selected svg {
     fill: #f00;
+}
+
+.sidebar__seaction:last-child{
+    padding: 16px 24px 0 24px;
+    
+}
+
+.sidebar__seaction:last-child p{
+    font-size: 13px;
+    color: #909090;
+}
+
+.sidebar__seaction__link--small{
+    margin-right: 8px;
+    font-size: 13px;
+    font-weight: 500;
+    color: #606060;
+    text-decoration: none;
 }
